 -- auth/jwt - add support for RS256 tokens. Also permit the username in the
    'username' field in addition to the 'sun' (Slurm UserName) field.
 -- service files - change dependency to network-online rather than just
    network to ensure DNS and other services are available.
 -- Add "Extra" field to node to store extra information other than a comment.

CONFIGURATION FILE CHANGES (see man appropriate man page for details)
=====================================================================
 -- Errors detected in the parser handlers due to invalid configurations are now
    propagated and can lead to fatal (and thus exit) the calling process.
 -- Enforce a valid configuration for AccountingStorageEnforce in slurm.conf.
    If the configuration is invalid, then an error message will be printed and
    the command or daemon (including slurmctld) will not run.
 -- Removed AccountingStoreJobComment option.  Please update your config to use
    AccountingStoreFlags=job_comment instead.
 -- Removed DefaultStorage{Host,Loc,Pass,Port,Type,User} options.
 -- Removed CacheGroups, CheckpointType, JobCheckpointDir, MemLimitEnforce,
    SchedulerPort, SchedulerRootFilter options.

COMMAND CHANGES (see man pages for details)
===========================================
 -- Changed the --format handling for negative field widths (left justified)
    to apply to the column headers as well as the printed fields.
 -- Invalidate multiple partition requests when using partition based
    associations.
 -- --cpus-per-task and --threads-per-core now imply --exact.
    This fixes issues where steps would be allocated the wrong number of CPUs.
 -- scrontab - create the temporary file under the TMPDIR environment variable
    (if set), otherwise continue to use TmpFS as configured in slurm.conf.
 -- sbcast / srun --bcast - removed support for zlib compression. lz4 is vastly
    superior in performance, and (counter-intuitively) zlib could provide worse