@@ -433,8 +433,6 @@ extern int cgroup_p_system_destroy(cgroup_ctl_type_t sub)
 	case CG_CPUS:
 		break;
 	case CG_MEMORY:
-		common_cgroup_set_uint64_param(&g_sys_cg[sub],
-					       "memory.force_empty", 1);
 		break;
 	case CG_DEVICES:
 		break;
@@ -638,22 +636,6 @@ extern int cgroup_p_step_destroy(cgroup_ctl_type_t sub)
 	case CG_CPUS:
 		break;
 	case CG_MEMORY:
-		/*
-		 * Despite rmdir() offlines memcg, the memcg may still stay
-		 * there due to charged file caches. Some out-of-use page caches
-		 * may keep charged until memory pressure happens. Avoid this
-		 * writting to 'force_empty'. Note that when
-		 * memory.kmem.limit_in_bytes is set the charges due to kernel
-		 * pages will still be seen.
-		 *
-		 * Since this adds a large delay (~2 sec) only do this if
-		 * running jobacct_gather/cgroup.
-		 */
-		if (!xstrcmp(slurm_conf.job_acct_gather_type,
-			     "jobacct_gather/cgroup") &&
-		    g_step_cg[CG_MEMORY].path)
-			common_cgroup_set_param(&g_step_cg[CG_MEMORY],
-						"memory.force_empty", "1");
 		break;
 	case CG_DEVICES:
 		break;
